--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <lombok.version>1.18.22</lombok.version>
+        <lombok.version>1.18.34</lombok.version>
         <hutool.version>5.7.22</hutool.version>
         <logback.version>1.3.14</logback.version>
         <netty.version>4.1.77.Final</netty.version>
@@ -44,6 +44,11 @@
     <!-- 父项目依赖管理    -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.deepleaper</groupId>
+                <artifactId>rpc-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.deepleaper</groupId>
                 <artifactId>test-api</artifactId>
