--- a/test-server/pom.xml
+++ b/test-server/pom.xml
@@ -20,6 +20,11 @@
             <groupId>com.deepleaper</groupId>
             <artifactId>rpc-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>4.2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
